syntax = "proto2";

message c2s_gm_command_response {
	required string name = 1;
	required uint32	result = 2;
}